--- a/src/_base.scss
+++ b/src/_base.scss
@@ -41,3 +41,41 @@ a {
 a:hover {
     opacity: map.get(variables.$opacity, "hf");
 }
+
+// Tables
+/* Table Styles */
+.dr-table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+/* Table Header */
+.dr-table thead {
+background-color: #012E40;
+color: white;
+text-transform: uppercase;
+}
+
+.dr-table th {
+padding: 12px 16px;
+text-align: center;
+font-weight: bold;
+}
+
+/* Table Body */
+.dr-table tbody tr {
+border-bottom: 1px solid #ddd;
+}
+
+.dr-table tbody tr:nth-child(even) {
+background-color: #f8f9fa;
+}
+
+/* Table Cells */
+.dr-table td {
+padding: 12px 16px;
+text-align: center;
+}
