--- a/css/style.css
+++ b/css/style.css
@@ -91,11 +91,13 @@ meter {
 /***
     End of CSS reset
 ***/
+/* Unordered List */
 ul {
   list-style-type: disc;
   list-style-position: inside;
 }
 
+/* Ordered List */
 ol {
   list-style-type: decimal;
   list-style-position: inside;
@@ -104,6 +106,113 @@ ol {
 ul, ol {
   padding-left: 1rem;
   margin: 1rem;
+}
+
+/* Table */
+.dr-table {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Table Header */
+.dr-table thead {
+  background-color: #012E40;
+  color: white;
+  text-transform: uppercase;
+}
+
+.dr-table th {
+  padding: 12px 16px;
+  text-align: center;
+  font-weight: bold;
+}
+
+/* Table Body */
+.dr-table tbody tr {
+  border-bottom: 1px solid #ddd;
+}
+
+.dr-table tbody tr:nth-child(even) {
+  background-color: #f8f9fa;
+}
+
+/* Table Cells */
+.dr-table td {
+  padding: 12px 16px;
+  text-align: center;
+}
+
+/* Form Styling */
+form {
+  max-width: 500px;
+  padding: 20px;
+  background: #012E40;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Form Group */
+.form-group {
+  margin-bottom: 20px;
+}
+
+/* Labels */
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: white;
+}
+
+/* Radio and Checkbox Styling */
+.form-group-inline {
+  display: block;
+  gap: 15px;
+}
+
+/* Regular text for radio and checkbox labels */
+.form-group-inline label {
+  font-weight: normal;
+  display: inline-block;
+  margin-right: 15px;
+}
+
+/* Input Fields */
+input[type=text],
+input[type=email],
+input[type=password],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background: #fff;
+}
+
+/* Placeholder Styling */
+input::placeholder,
+textarea::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+/* Submit Button */
+.submit-btn {
+  width: 100%;
+  padding: 10px;
+  background: #007bff;
+  border: none;
+  color: white;
+  font-size: 16px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 body {
@@ -169,6 +278,48 @@ p {
   font-weight: 900;
 }
 
+@keyframes float {
+  0% {
+    scale: 100%;
+  }
+  50% {
+    scale: 120%;
+  }
+  100% {
+    scale: 110%;
+  }
+}
+@keyframes vfloat {
+  0% {
+    bottom: 0px;
+  }
+  50% {
+    bottom: 30px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+@keyframes popout {
+  0% {
+    opacity: 0%;
+    translate: 0px, -100px;
+  }
+  100% {
+    opacity: 100%;
+    translate: 0px, 0px;
+  }
+}
+@keyframes scalein {
+  0% {
+    opacity: 0%;
+    scale: 1%;
+  }
+  100% {
+    opacity: 100%;
+    scale: 100%;
+  }
+}
 /* Padding all around */
 .dr-p-n {
   padding: 0;
