--- a/src/_animations.scss
+++ b/src/_animations.scss
@@ -44,3 +44,18 @@ main {
 button {
     transition: 0.3s ease-in;
 }
+.dr-static {
+    animation: unset;
+}
+.dr-anim-long {
+    animation-duration: 1s;
+}
+.dr-anim-quick {
+    animation-duration: 0.1s;
+}
+.f1preview:focus {
+    animation: scalein 0.3s ease-in-out;
+}
+.f2preview:focus {
+    animation: popout 0.5s ease-out;
+}
