Fixes issues with buttons

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -59,79 +59,59 @@ a:hover {
     opacity: map.get(variables.$opacity, "hf");
 }
 
-@each $theme-name, $theme-values in variables.$themes {
-    .dr-#{$theme-name} {
-        @each $type, $color in $theme-values {
-            a.dr-link-#{$type} {
-                @if functions.is-map($color) {
-                    @include link($color: map.get($color, "color"));
-                }
-            }
-
-            a.dr-link-#{$type}:hover {
-                @if functions.is-map($color) {
-                    @include link($color: map.get($color, "hover"));
-                }
-            }
-        }
-
-        .dr-btn {
-            color: map.get($theme-values, "main-text");
-        }
-    }
-}
-
 // Tables
 /* Table Styles */
 .dr-table {
+    $default-theme-map: map.get(variables.$themes, "default-theme-light");
     width: 100%;
     border-collapse: collapse;
-    border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+    /* Table Header */
+    thead {
+        background-color: map.get(map.get($default-theme-map, "dark"), "color");
+        color: map.get(map.get($default-theme-map, "dark"), "text");
+        text-transform: uppercase;
+    }
+
+    th {
+        padding: map.get(variables.$padding-sizes, "sm");
+        text-align: center;
+        font-weight: map.get(variables.$font-weights, "b");
+    }
+
+    tbody {
+        tr {
+            border-bottom: map.get(variables.$border-width, "xsm") solid #ddd;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f8f9fa;
+        }
+    }
+
+    td {
+        padding: 12px 16px;
+        text-align: center;
+    }
+
+    td {
+        padding: 12px 16px;
+        text-align: center;
+    }
   }
-  
-/* Table Header */
-.dr-table thead {
-background-color: #012E40;
-color: white;
-text-transform: uppercase;
-}
-
-.dr-table th {
-padding: 12px 16px;
-text-align: center;
-font-weight: bold;
-}
-
-/* Table Body */
-.dr-table tbody tr {
-border-bottom: 1px solid #ddd;
-}
-
-.dr-table tbody tr:nth-child(even) {
-    background-color: #f8f9fa;
-}
-
-/* Table Cells */
-.dr-table td {
-padding: 12px 16px;
-text-align: center;
-}
 
 /* Form Styling */
 form {
     max-width: 500px;
     padding: 20px;
-    background: #012E40;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid black;
+    border-radius: map.get(variables.$rounded-corners, "xsm");
 }
 
 /* Form Group */
 .form-group {
-    margin-bottom: 20px;
+    margin-bottom: map.get(variables.$margin-sizes, "md");
 }
 
 /* Labels */
@@ -139,7 +119,7 @@ label {
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
-    color: white;
+    color: black;
 }
 
 /* Radio and Checkbox Styling */
@@ -163,7 +143,7 @@ textarea {
     width: 100%;
     padding: map.get(variables.$padding-sizes, "sm");
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: map.get(variables.$rounded-corners, "xsm");
     box-sizing: border-box;
     background: #fff;
 }
